--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .home{
-    background-image: url(../../images/banner-1.png);
+    background-image: url("https://static1.lenskart.com/media/desktop/img/2024/may/prog/New%20Web%20Banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
