--- a/src/Components/CardInform/CardInform.css
+++ b/src/Components/CardInform/CardInform.css
@@ -1,21 +1,20 @@
-.cor-success{
-    background-color: RGB(255, 238 , 214);
-}
-.cor-danger{
-    background-color: RGB(217, 236 , 210);
-}
-
-.cor-primary{
-    background-color: RGB(217, 236 , 210);
-}
 .inform {
     height: 125px;
     width: 450px;
-  padding-top: 10px;
-    
-  
+    padding-top: 10px;
 }
 
-.info-image{
-   width: 140px;
+.info-image {
+    width: 100%; /* Ensures the image takes up the full width of the container */
+    max-width: 180px; /* Ensures the image does not exceed 180px in width */
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Center the image horizontally */
+}
+
+.mains {
+    margin-left: auto; /* Centers the .mains container */
+    margin-right: auto; /* Centers the .mains container */
+    padding-left: 100px;
+
 }
