--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -1,16 +1,34 @@
-
-.welcome{
+.welcome {
     margin-top: 20px;
-    background-color:RGB(242, 242, 242);
+    background-color: RGB(242, 242, 242);
+    padding: 20px 0;
 }
-.welcome img{
-    background-color: yellow;
 
-    height:100%;
-    
-
+.welcome-heading {
+    margin-bottom: 20px;
 }
-.img{
-    margin: 15px;
-    
+
+.text-secondary {
+    margin-bottom: 20px;
+}
+
+.img-container {
+    margin-top: 15px;
+}
+
+.app-store-img {
+    max-width: 150px;
+    height: auto;
+    margin-right: 10px;
+}
+
+.app-store-img:last-child {
+    margin-right: 0;
+}
+
+.promo-img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-right: 0; /* Ensures the image is right-aligned within the column */
 }
